--- a/Rastera/asnic/rastera/health.html
+++ b/Rastera/asnic/rastera/health.html
@@ -67,17 +67,13 @@
     qt:Wordindex Directive
     qt:间歇性袭扰
 
-    P:
-    P:
-    p:
-    p:
-
     dialog:
         I:nothing
         T:ok
         Y:abc1342
         O:卡死了附近
-        
+Snicdate:9-18
+        南京大屠杀关联阿旁宫女不反抗
 </pre>
          </div>
     <script src="../../content/ace-editor/ace.js"></script>
