--- a/Rastera/asnic/serial-time/persuation.html
+++ b/Rastera/asnic/serial-time/persuation.html
@@ -1,4 +1,67 @@
-﻿雪碧饮料 Incident
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>解释与劝说Persudable</title>
+    <link href="../../content/lumia-style/lumia.css" rel="stylesheet" />
+    <link href="../../content/lumia-style/ketself.css" rel="stylesheet" />
+
+
+</head>
+<body>
+        <pre id="editor">
+空间模板名称：植鱼照 尽舞纯 
+            
+    注释或解释[目前Current]：
+        维赛德.声音优先
+        索来德.形状优先
+            例子：舱五嫚 陆毅三世
+    函数：
+        参数是：//启示录Rewill
+        克:臬元素 党
+        中:北京人中线 地下 南半球
+        妓:菱形 声音 不单单是妓女
+
+        如果 感觉 是
+        维赛德:
+            钕舌京: 捅（yong）脍（kuai）Z 吃豆腐 
+            党 毛泽东(克中妓) 宗叫 
+                三个医院
+                    宝鼎
+                    前世（龍财）
+                    按钉悶 
+            多个结果
+                被迫骂娘
+                释放心酸感、然后以(心酸感善)攻击善良人 //神鬼怕恶人
+   
+            微粒子:钺善良钺网死离弄 攮刀
+
+        龍.?财神(Air F lead alfed)
+            山水翠:2.6G
+            砖头屋里烧纸????
+            脏果子五行中???
+                Socalled儿子被强行喂油条、治不好那钱就不管了、还觉得自己很强硬
+    结束
+
+    函数：
+        时间：9-18 上午9.40出去
+        出去帮忙解锁手机号
+        锌酸甘：
+            新华社超级丹：
+                红色 黄色
+            蛋浆扣[Mala]剩鱼：
+                十五圆忍民逼
+        二字的锌粒意见：
+            不如干脆从琉璃河直接到城里去把屎甘完
+
+
+    结束
+  </pre>
+    <script src="../../content/ace-editor/ace.js"></script>
+    <script src="../../content/ace-editor/ace-settings.js"></script>
+</body>
+</html>
+<!--雪碧饮料 Incident
     微分子
     赵dna不干佛教 就不能复仇 为什么这么信佛教 海丽阿姨
     叫仙家去复仇 压着呢
@@ -70,30 +133,6 @@
     姜删号盖 笨性男祎 as a criteria直接穿透改变
     Zelda传说 Possessed 镇爱不知好夕（dai~）
     伤心后怎么办慰藉找最接近的人 动物
-[克中妓(几)]启示录Rewill
-    克:臬元素 党
-    中:北京人中线 地下 南半球
-    妓:菱形 声音 不单单是妓女
-
-    维赛德(目前声音优先):
-        钕舌京: 捅（yong）脍（kuai）Z 吃豆腐 
-        党 毛泽东(克中妓) 宗叫 
-            三个医院
-                宝鼎
-                前世（龍财）
-                按钉悶 
-        多个结果
-            被迫骂娘
-            释放心酸感、然后以(心酸感善)攻击善良人 //神鬼怕恶人
-    索来德(目前形状优先) 
-        微粒子:钺善良钺网死离弄 攮刀
-
-    龍.?财神(Air F lead alfed)
-        山水翠:2.6G
-        砖头屋里烧纸????
-        脏果子五行中???
-            Socalled儿子被强行喂油条、治不好那钱就不管了、还觉得自己很强硬
-[结束]
 
 [Photograghy:城门串鑫杀]
-    HxW 照相
+    HxW 照相-->
