--- a/Rastera/asnic/rastera/health.html
+++ b/Rastera/asnic/rastera/health.html
@@ -74,6 +74,34 @@
         O:卡死了附近
 Snicdate:9-18
         南京大屠杀关联阿旁宫女不反抗
+
+Time：9-19
+    方刀西方鼻屎尿流
+    重.阿尔弗莱德
+    杀.成就感
+        將.僵帅
+            自我反应
+                “就当是把垃圾动物送到Warboundary BattleReason”
+        武
+            士兵残费.慢型紫砂
+                疼类型：
+                疼强度：
+                疼时间长短：
+        文
+            傻了
+            暗算
+            被抛弃
+        KansaiF.HxW
+            Response
+            Reflect
+            能量自居邪Dequalified
+            漏洞.自我善良.一报还一报
+        坟墓类型、范围、HxW
+            端口?.被谁重复利用
+
+
+    
+
 </pre>
          </div>
     <script src="../../content/ace-editor/ace.js"></script>
