--- a/Rastera/asnic/rastera/health.html
+++ b/Rastera/asnic/rastera/health.html
@@ -99,6 +99,22 @@ Time：9-19
             漏洞.自我善良.一报还一报
         坟墓类型、范围、HxW
             端口?.被谁重复利用
+Ojinsa-Slashed：9-23
+    Solid.flat:
+        odin.limiting:
+            dot.line.metric
+    手画法优先级 连点划线 划线used to 从左到右
+    封口
+    角隐与边穿
+    回方圆 角弧
+    Cylinder
+    center:
+        dot.line
+    纸平面表示
+        hxw.look:interface 
+            eye-mixing 边
+
+        
 </pre>
          </div>
     <script src="../../content/ace-editor/ace.js"></script>
