--- a/Rastera/asnic/rastera/ketself.html
+++ b/Rastera/asnic/rastera/ketself.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <title>10-维赛德重感情Ketself Lsinout Vcos BrainRectFly</title>
-    <link href="../../content/lumia-style/lumia.css" rel="stylesheet" />
-    <link href="../../content/lumia-style/ketself.css" rel="stylesheet" />
 
+    <link href="../../content/lumia-style/ketself.css" rel="stylesheet" />
+        <script src="../../content/jquery/jquery-3.5.1.min.js"></script>
+    <link href="../../content/lumia-style/lumia.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 </head>
 <body>
