func family kid metric

--- a/Rastera/asnic/artistic-serenity/serenity.html
+++ b/Rastera/asnic/artistic-serenity/serenity.html
@@ -193,7 +193,15 @@ End
 天空很蓝
 Ref.亚特兰蒂斯Atlantis鸭子
 
-
+正大综艺 非洲
+    双簧管
+    催眠师
+    腿被抡 因为老鼠 偷车子 的那个家属院
+百慕大三角亚特兰蒂斯
+    被吸走的戒指
+丁丁历险记
+    瀑布内部
+    巴西有关？
 </pre>
 <div id="compiler">
     <div id="console"></div>
