--- a/Rastera/asnic/rastera/health.html
+++ b/Rastera/asnic/rastera/health.html
@@ -114,7 +114,58 @@ Ojinsa-Slashed：9-23
         hxw.look:interface 
             eye-mixing 边
     Afterschool:母亲.两轮车.带着孩子：念时书
+
+Shangwu:9-27 
+    Definable:
+        Unite:
+        Degree Arc 3.14
+    打开：文件名
+    func LinkHandles(parameters)
+            Pinyin:
+                Zhengzhichuan hui chuan Thrans 
+                hui dian xian wave mian wei
+            jieshu
+        [spell]
+            [800|008]
+            [8000008]
+            [-00000-]
+            [4000008]
+            [030|030]
+        [end]
+        dian lian mian xian chuan:
+            handle bashou lian he de wen ti
+            nei bu tu xing wen gu de wen ti
+            li mian yao zu cheng yi ge tu xing bi ru shuo:san jiao, ling xing
+    end
+
+    [draw]
+              ..
+        .00000TT00000：
+         000000000000
+        .TT00000000TT：
+         000000000000
+        .0000TT000000：
+              ..
+    [end]
+
+    func GetBabyMetric(parameters)
+        Raber.Ketself.Pressure(gongchanding,qian,nvren)
+        Family japanShanben
+        resultPressure = japanShanben.Fortune()
+        resultSmooth = resultPressure.Release()
+        resultSmooth.kids.Draw()
+        begin
+            hai zi(gong tong te dian） hua de tu pian
         
+            --------
+             Ooo /\
+             e e 口
+            ~~~~~~~~
+        end
+        return Solid:"nice survey for restriction sphere"
+    end
+closed
+
 </pre>
          </div>
     <script src="../../content/ace-editor/ace.js"></script>
