--- a/Rastera/asnic/rastera/health.html
+++ b/Rastera/asnic/rastera/health.html
@@ -165,7 +165,7 @@ Shangwu:9-27
         return Solid:"nice survey for restriction sphere"
     end
 closed
-
+老友记:"早晨angel 东方.启明.芷颜惠"
 </pre>
          </div>
     <script src="../../content/ace-editor/ace.js"></script>
