--- a/Rastera/asnic/arrange-beauty/mfs.html
+++ b/Rastera/asnic/arrange-beauty/mfs.html
@@ -23,7 +23,9 @@
     = 物理？.(Ͼreal-Remander) OS-SO 交欢Sexcast  
     = Refer to ȸ6-26 [空间与维度]微粒子 动力（重 迁引 磁 浮 推进）.docx
     = Ketself:Insanely Nice Fusion Plus
-    Rotate evolve roll spin turn whirl circle Encircle
+     circle
+    evolve
+    Rotate  roll spin turn whirl~pool Encircle spiral
     = Ͼnic kapa Ani~dura more than sentimental& Gravitational
     = Arrange->Age θ-1-3-8
 
