--- a/Rastera/asnic/rastera/health.html
+++ b/Rastera/asnic/rastera/health.html
@@ -166,6 +166,20 @@ Shangwu:9-27
     end
 closed
 老友记:"早晨angel 东方.启明.芷颜惠"
+
+时(氏)序：9-28
+    文明
+        光头
+        头发
+    星球起源历史怎么分析
+        史前星际战争
+        
+        
+    Earwax
+    血痂
+        牵引 痒痒 去挠钩套索
+    姐弟族支 meatstyle
+    昆虫 <界定点> 动物 
 </pre>
          </div>
     <script src="../../content/ace-editor/ace.js"></script>
