--- a/Rastera/asnic/rastera/health.html
+++ b/Rastera/asnic/rastera/health.html
@@ -180,6 +180,11 @@ closed
         牵引 痒痒 去挠钩套索
     姐弟族支 meatstyle
     昆虫 <界定点> 动物 
+10-2:
+    肉酱氺角
+    5荡
+    +十 运算符 语言 索来德相同
+
 </pre>
          </div>
     <script src="../../content/ace-editor/ace.js"></script>
