--- a/Rastera/asnic/rastera/health.html
+++ b/Rastera/asnic/rastera/health.html
@@ -120,7 +120,7 @@ Shangwu:9-27
         Unite:
         Degree Arc 3.14
     打开：文件名
-    func LinkHandles(parameters)
+    function LinkHandles(parameters)
             Pinyin:
                 Zhengzhichuan hui chuan Thrans 
                 hui dian xian wave mian wei
@@ -184,6 +184,23 @@ closed
     肉酱氺角
     5荡
     +十 运算符 语言 索来德相同
+Sex~HardInfo:10-3
+    Sexcast.Snic=
+        TimeFirst:(Minutes,Hours,Times)
+        30 = premature ejaculation
+        15 = male recovery
+        ? = HardInfo influence
+            geographic mountain like            
+            
+        Both.Feeling:First
+        Both.Sentimental:Lost
+        Both.Emotion:Buried
+&forall;家乐福 yesterday  10-4
+    Arc槽肏不圆 PMP
+    Rectflag
+    HedgeStart
+    kidRestrict
+    仙人托梦.灵境
 
 </pre>
          </div>
