--- a/Rastera/asnic/serial/persuation.html
+++ b/Rastera/asnic/serial/persuation.html
@@ -113,7 +113,36 @@
                 解释：忍看不见 生灵被迫(盖特赛尔夫.宗叫.党派.神话捏造)
     结束
 
-    
+    [！]健康优先.返回时间 = 8到14天
+
+    函数.健康优先:返回时间//Sowetrans.kets 优先级 形状 声音 颜色 动力
+        姓名：Z鱼
+            影响
+                姓名：吴，拜假型，其他人地英响
+                绳潇：十2声笑 5线甲                  
+            好处
+                时间 8 - 14 天
+                标量 错开 特殊时间字符
+            健康值：
+                如果 踢铅灰癞 那么 值=3
+                如果 好处（8,14） 那么 值= 3 乘以 5 = 15
+            圆周率
+                3.14影响
+        回返或直射            
+
+        收到时间：昨天
+        
+        磁欧石.直射镜.能量牵
+            文明
+                亚特兰蒂斯
+            范围：
+                大气层界限
+                地心
+            影响：
+        回返或直射
+    结束
+
+    执行 L
 
 模板函数始末
     开始
@@ -121,11 +150,9 @@
         [start]
         [end]
     结束
+
   </pre>
-<div id="status" style="margin:0;padding:10px 0 0 10px;height:40px; width:100%; background-color:dimgray; ">
-   行：348 列：89 位置：876
-  
-</div>
+
 </div>
     <script src="../../content/ace-editor/ace.js"></script>
     <script src="../../content/ace-editor/ace-settings.js"></script>
