--- a/UnitTest/Extendable/Analytical.html
+++ b/UnitTest/Extendable/Analytical.html
@@ -16,7 +16,21 @@ Prioity
         Type:Kind Kant Kint  Rant
         Infort:
 Prioity
-
+Implused
+Categorizd:
+    AI
+         人机互动
+         物体识别
+         图像分割
+         人脸识别
+         动作识别
+         运动跟踪
+         机器人
+         运动分析
+         机器视觉
+         结构分析
+         汽车安全驾驶
+    https://ai.qq.com/doc/imagetag.shtml
 </pre>
 </body>
 </html>
