Analytical.nod.when.off.inner.brain.swear

--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -11,9 +11,9 @@
     </style>
 </head>
 <body>
-    <textarea class="auto-style1">
+<textarea id="code" name="code">
 维复仇 Meisai
-    ▼宙斯Indexes
+宙斯Indexes▼
     PotionType
     H△W | wHitch part of body
     Feelin Clic
@@ -22,8 +22,7 @@
     Ignite
     附体农村罪徒元素
     Arrange Lz: 东北 北京 被干
-
-◆ 圣女贞德Gendering
+圣女贞德Gendering◆
     //良 压着?.B比看到落体钕妊耿好
     ?1色即是空
     ?2空即是色
@@ -48,20 +47,20 @@
     Timechronical
     Techronic
 抡圆 LinkingSaifer
-拎起来
-　　就好像是一个故步自封在无知的（阴阳佛伊斯耶稣兰）人在控制一个人身体里面的附体一样
-　　实际是在最后搞自己
-　　附体 生命体 起源 源起 
+    拎起来
+　　    就好像是一个故步自封在无知的（阴阳佛伊斯耶稣兰）人在控制一个人身体里面的附体一样
+　　    实际是在最后搞自己
+　　    附体 生命体 起源 源起 
 银翼Silver
-传单
-　　HxW
-　　国加层次 
-　　卫星.党派牵制
-　　黑社会.层次
-　　Aliens.KansaiF.OpenSecret
-HxW.附宇纣 Kurser
+    传单
+    HxW
+    国加层次 
+    卫星.党派牵制
+    黑社会.层次
+    Aliens.KansaiF.OpenSecret
+    HxW.附宇纣T.T. Kurser
 
-国际通知 Nationaltranspeaker
+国际通知 NationalTranspeaker
 
     </textarea>
 </body>
