--- a/UnitTest/Extendable/Analytical.html
+++ b/UnitTest/Extendable/Analytical.html
@@ -1,7 +1,7 @@
 ﻿<html xmlns="http://www.w3.org/1999/xhtml">
 <head><title></title></head>
 <body>
-<pre>
+    <pre>
 
 Analytical
     live being towards        
@@ -15,22 +15,81 @@ Prioity
     //Implused Prefered:
         Type:Kind Kant Kint  Rant
         Infort:
-Prioity
+
 Implused
-Categorizd:
-    AI
-         人机互动
-         物体识别
-         图像分割
-         人脸识别
-         动作识别
-         运动跟踪
-         机器人
-         运动分析
-         机器视觉
-         结构分析
-         汽车安全驾驶
-    https://ai.qq.com/doc/imagetag.shtml
+    Categorizd:
+        AI dump to APP
+             人机互动  物体识别  图像分割 人脸识别 动作识别 [运动跟踪 wifi]
+             机器人  运动分析 机器视觉  结构分析  汽车安全驾驶
+        https://ai.qq.com/doc/imagetag.shtml
+    Device
+        watch solid first
+        phone
+        pad
+        computer
+            keyout:orith:
+            alg-orith-em 照妖镜 迭代
+    IsOnline
+    IsApped
+    IsConnected
+        样式
+            metro style might not be rectangle ，better be own
+
+        html    
+            browser.safari
+            file upload
+            research.filesaver.js https://github.com/eligrey/FileSaver.js
+        App 
+            DumpedPerform beware
+            jieba
+            图形识别
+    Runtime
+Intrigued to Interest 性趣
+        GDM：罐墩焖
+        设立目标 没劲 Asnic.
+        Drawing
+            Colorize,borderly:cfs
+            balance parallel to artlisense 平衡 美 图
+        Atowards:color.impluse.first
+        Ageing:infancy~endportal:1.3.8.16.25.30.35.45.50.55.60.70.80.100.110.120.?.220
+         disabled 
+        1 运动类：篮球、羽毛球、兵乓球、足球、滑板、滑旱冰、跑步、跳绳、举重……（兴趣/爱好）
+        2 娱乐类：听音乐、看电影、绘画、写小说、看书……（兴趣/爱好）
+        3 冒险类：做弹弓玩、做木剑玩、做橡皮枪玩……（爱好）
+        4 智力类：拼图、拆装（拆小汽车、闹钟、电风扇之类的）……（兴趣/爱好）
+        5 收藏类：收藏扑克牌、小汽车、手表、鞋之类的……（爱好）
+        6 乐器类：弹吉他、钢琴、萨克斯、葫芦丝、大号、小号……（兴趣/爱好）
+        7 文艺类：折纸（可以尝试无限种折纸飞机的办法）、剪纸、品茶、涂鸦……（爱好）
+
+        平面立体几何 投射 sidekick angerout
+        whitepaper.flatmetrik.skatch.layerout
+        saved:历史资料 compiler 
+            https://zhidao.baidu.com/question/1437138540821801419.html
+        ascii 图 htmlinside.png
+        color.gridly.interface.preditor
+Functioned
+
+Lang.Unified
+Asnic.Frame
+        Leon
+            transcolor 
+                korner anger out
+                stick sidekick
+        Rect
+        Func
+Asnic.Unified
+
 </pre>
+    <div id="result"></div>
+    <script type="text/javascript">
+
+        if (localStorage.clickcount) {
+            localStorage.clickcount = Number(localStorage.clickcount) + 1;
+        } else {
+            localStorage.clickcount = 1;
+        }
+        document.getElementById("result").innerHTML = "你在按钮上已经点击了 " +
+            localStorage.clickcount + "次。";
+    </script>
 </body>
 </html>
