--- a/Rastera/asnic/rastera/heuristic.html
+++ b/Rastera/asnic/rastera/heuristic.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Analytical:历史 萨尼克 克莱克赛 Transback </title>
+    <title>Analytical:历史 萨尼克 克莱克赛 Transback Hentrunsik</title>
 </head>
 <body>
     <pre>
@@ -12,6 +12,22 @@ DBCY:10-13
         Lost contact  
         托梦
         从战争.杨修到指挥.曹操 ?= 厚黑 
+TriangleTopUnder：1 ：10-14
+        母 找 我 女 氏
+        35 东边Serial 2次多
+        鼻子Arnold 软骨 脚软骨自然歪
+        不记仇 
+        Time
+            伊甸Road求救信号：
+            Directive：
+            --------------------
+            Cowrapped：复仇 细胞 
+            --------------------
+        Snic
+        左脚踝above 永远不分离？：东中西女Nice Jealous Dynamically Rotate； 我
+        High heel nice yinyang
+Legend
+Legmend
     </pre>
 </body>
 </html>
