--- a/Rastera/asnic/vesaid/Argus.html
+++ b/Rastera/asnic/vesaid/Argus.html
@@ -65,7 +65,10 @@ olid~OutØVesaid空间部分
     一声平二声扬三声拐弯四声降
     编程
     变成
-    Xamarin X=>跟什么样的文字或字母念什么样的音
+    Xamarin X=>跟什么样的文字或字母念什么样的音 
+    G 发音 in ae
+    Gen 
+    Get
 索来德Solid-Out 
 
     Gravitational
@@ -86,6 +89,7 @@ olid~OutØVesaid空间部分
     人动物：
         Fall  autumn
         Fly
+ 
 </pre>
     <script src="../../content/ace-editor/ace.js"></script>
     <script src="../../content/ace-editor/ace-settings.js"></script>
