vivo back 8?.days

--- a/Rastera/asnic/rastera/heuristic.html
+++ b/Rastera/asnic/rastera/heuristic.html
@@ -28,6 +28,15 @@ TriangleTopUnder：1 ：10-14
         High heel nice yinyang
 Legend
 Legmend
+Rhea CKronor
+    Vesaid
+        GLL
+        阿勒泰 KLH
+        Range:
+            东方的声音 
+            中 
+            西方的声音
+        Transtick Rant 好似把声音圈起来
     </pre>
 </body>
 </html>
