--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -63,6 +63,15 @@
 
 国际通知 NationalTranspeaker
 
+RheaGroup
+    when snic 
+    snic time 
+        张镇爱 小臭子 王猛 城池的破坏
+        老杜 郑明雪 巩亮亮（你得听） -(我)-
+    As fOr revenge at the restriction of Law
+        The law:how to USE it to the max 
+
+
     </textarea>
 </body>
 </html>
