--- a/UnitTest/Analytical/Analytical.html
+++ b/UnitTest/Analytical/Analytical.html
@@ -192,8 +192,9 @@ FuncKint Dynamical syntax keywordiz
     注释 // 解释：阿斯蒂芬
 
     Casual //python no end
-    CasualEnd
+    Organizd?.End
     Couple
+    Func.Each.Window
 Vesaier
        Wozi uzi Oz //Odimentional Revenz
         Attack
