3 days left ?->Funk.whoM

--- a/Rastera/asnic/rastera/ketself.html
+++ b/Rastera/asnic/rastera/ketself.html
@@ -196,15 +196,15 @@
         |   隶&gt
         [?.Solid.Shape.Symbol~Shape~Flag]Timesanical
             十 旗
-        [CentralRound.SceptreType]hold by whom
-            ----------
+        [CentralRound.SceptreType]hold by whom           
             女
+                义 gay 单性 双性
             男
             ~~~~~~~~~~
-            美
+                美
+            ----------
             钱
-            权
-            义气
+            权            
             地盘            
         [Conflict:Warboundary|BattleReason|EventCase]
             H◇W.Timesanical.GetSufferRange()
