--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -60,16 +60,18 @@
     黑社会.层次
     Aliens.KansaiF.OpenSecret
     HxW.附宇纣T.T. Kurser
+    鬼地方
 
 国际通知 NationalTranspeaker
 
-RheaGroup
+Reria'z Lave(Rhea)
+    Explais.Group
     when snic 
     snic time 
         张镇爱 小臭子 王猛 城池的破坏
-        老杜 郑明雪 巩亮亮（你得听） -(我)-
+        老杜 郑明雪 巩亮亮（你得听） -(我)- Afled
     As fOr revenge at the restriction of Law
-        The law:how to USE it to the max 
+        The law:how to USE it to the maximum 
 
 
     </textarea>
