--- a/Rastera/asnic/rastera/heuristic.html
+++ b/Rastera/asnic/rastera/heuristic.html
@@ -113,7 +113,34 @@ ShamedArentFramedAlfed：10-20 -- 10-21
         Flag：阴毒过期 -<>- 一浪~~
             Metriwhich 
             Color
-        
+FrameSleep：10-22 -- 10-24
+    
+    TortureRant:
+        Portal.Left
+        Portal.Get
+        Portal.FormerLife.Tinywhat      
+        Portal.FormerLife.SufferKint
+        Portal.FormerLife
+    SelfTorture
+
+    Transparent
+    水 电 火 石 木
+        源素
+     中 启元
+        时间
+    金 木 水 火 土
+    锂面 印度脏 横盒睡Waetaer
+    Outspace 星球 下面 上面
+FrameSleep5：10-25
+    bool isGapholes = false;
+    long = SnicTime.Portal
+    // now is still being seen playable without notice by the HIGH civilization
+    //疼做人
+    long = indivduals = kansaiF.isRecognized
+    //西克中妓多
+    emporCount = ltsz * 疼 * kansaiF.isRecognized.Count
+       穷变富
+       疼更疼 AngleCount
     </pre>
 </body>
 </html>
