--- a/Rastera/asnic/rastera/rast.html
+++ b/Rastera/asnic/rastera/rast.html
@@ -10,25 +10,27 @@
     <pre id="editor">
 「附体到生命体进度」
         <>()（）〈〉‹›﹛﹜ ［］《》﹝﹞〔〕{}「」【】︵︶︷︸︿﹀︹︺︽︾﹁﹂﹃﹄︻︼
-bottom low middle high Redemption邪毒.?正
-bottom low middle high sprite
-bottom low middle high Distinguishing characters
-bottom low middle high Atlantis Courier
-bottom low middle high Angle L wolf 
-bottom low middle high AC-MIS  mei sai yuan
-bottom low middle high Wolf?.L.angle
-bottom low middle high AngleWolf
-bottom low middle high Cansai
-bottom low middle high 起源 Source Origin
-bottom low middle high 从danger wjcking.五大仙家   cansai  ALM 健康 以来问
-bottom low middle high 下体到牵引 起源IF未知 复仇 牵引   东西转制 ALM 
-bottom low middle Lhigh
-shy-fe-ne-sos Atlantis’tube 
-小时候脑海伯恩记忆 从出生牵引到 Anti~gaps 健康 参照健康docx
-格兰蒂亚 tele-cfs former life
-bottom low middle high眼 眉  健康
-bottom low middle high
-bottom low middle high
+第三阶段后
+
+    bottom low middle high Redemption邪毒.?正
+    bottom low middle high sprite
+    bottom low middle high Distinguishing characters
+    bottom low middle high Atlantis Courier
+    bottom low middle high Angle L wolf 
+    bottom low middle high AC-MIS  mei sai yuan
+    bottom low middle high Wolf?.L.angle
+    bottom low middle high AngleWolf
+    bottom low middle high Cansai
+    bottom low middle high 起源 Source Origin
+    bottom low middle high 从danger wjcking.五大仙家   cansai  ALM 健康 以来问
+    bottom low middle high 下体到牵引 起源IF未知 复仇 牵引   东西转制 ALM 
+    bottom low middle Lhigh
+    shy-fe-ne-sos Atlantis’tube 
+    小时候脑海伯恩记忆 从出生牵引到 Anti~gaps 健康 参照健康docx
+    格兰蒂亚 tele-cfs former life
+    bottom low middle high眼 眉  健康
+    bottom low middle high
+    bottom low middle high 困
 
 开始Rast
 
