--- a/Rastera/asnic/rastera/redemption.html
+++ b/Rastera/asnic/rastera/redemption.html
@@ -6,7 +6,7 @@
     <link href="../../content/lumia-style/lumia.css" rel="stylesheet" />
 </head>
 <body>
-    <pre id="editor">
+    <textarea >
 文明 复兴 Redemption启示录 pattern
 
     第17天
@@ -181,7 +181,7 @@
 
     眼睛看和brain visual system 看到的物体或图形 代表 量  true false  矢量形成速率 
 
-    </pre>
+    </textarea>
     <script src="../../content/ace-editor/ace.js"></script>
     <script src="../../content/ace-editor/ace-settings.js"></script>
 </body>
