--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -60,6 +60,8 @@
     黑社会.层次
     Aliens.KansaiF.OpenSecret
     HxW.附宇纣T.T. Kurser
+        主要部位动
+        生日
     鬼地方
 
 国际通知 NationalTranspeaker
@@ -72,8 +74,6 @@ Reria'z Lave(Rhea)
         老杜 郑明雪 巩亮亮（你得听） -(我)- Afled
     As fOr revenge at the restriction of Law
         The law:how to USE it to the maximum 
-
-
     </textarea>
 </body>
 </html>
