--- a/Rastera/asnic/os/elos.html
+++ b/Rastera/asnic/os/elos.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-    <pre>
+    <textarea>
 源素启元时 Sprites Of 
 　　钅元素起源时 Source Origin Search
 　　
@@ -48,6 +48,6 @@ Cell* // Called on earth as a so-called mainIndex is the MUST mind the name othe
 　　Voice 
 　　Symbol Character letter
 
-    </pre>
+    </textarea>
 </body>
 </html>
