--- a/Rastera/asnic/rastera/heuristic.html
+++ b/Rastera/asnic/rastera/heuristic.html
@@ -64,13 +64,13 @@ Rhea CKronor
             
         生命体文明历史最早演化 
         Dino：恐龙
-        Group：群 氏 族 部  落  酋  奴 主 隶 
+        Group：群 氏 族 部  落  酋  奴 主 隶 封 建 //社会
         Kause:be dic cause
-            女: 义~ gay~单性~双性:男
+            女: 义~ gay~单性~双性:男 
             -----------------------
                 美M beauty
             -----------------------
-            钱 权 地盘
+            钱 权 地盘 宗教
             阿尔弗莱德： 气 仇 isolated 交易
         
         Group：氏：交易：口角
