--- a/Rastera/asnic/rastera/scratch.html
+++ b/Rastera/asnic/rastera/scratch.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>9-物理索来德 困乏 刀牵连 Scratch</title>
+    <link href="../../content/lumia-style/lumia.css" rel="stylesheet" />
 </head>
 <body>
 <textarea>
@@ -83,10 +84,6 @@ Creal 波 salamander能量2020年8月5日
 邢团马的 笑扫目射 genetic出汗
 阿伊 阿姨 
 徐少林 游戏 赤色要塞第二关成就感被ka
-
-
-
-
 
 +O WJCKING.Was being were 叫宗θvil Util 2020/8/-7 气铅钓鱼
 
