--- a/Rastera/asnic/rastera/vesaid.html
+++ b/Rastera/asnic/rastera/vesaid.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>10-维赛德重感情Ketself Lsinout Vcos BrainRectFly</title>
+    <link href="../../content/lumia-style/lumia.css" rel="stylesheet" />
 </head>
 <body>
 <textarea>
