--- a/AngelNetwork/analytical/analytical.html
+++ b/AngelNetwork/analytical/analytical.html
@@ -1,7 +1,8 @@
 ﻿<html xmlns="http://www.w3.org/1999/xhtml">
 <head><title></title></head>
-<body>
-    <pre>
+
+<body id="b">
+    <pre id="editor">
 
 Analytical
     live being towards        
