--- a/Rastera/asnic/serial/persuation.html
+++ b/Rastera/asnic/serial/persuation.html
@@ -110,7 +110,7 @@
                 解释：忍看不见 生灵被迫(盖特赛尔夫.宗叫.党派.神话捏造)
     结束
 
-    函数.健康优先:返回时间
+    函数 健康优先:返回时间
         解释代号：形明维Sowetrans.kets 优先级 形状 声音 颜色 动力
      
         姓名：Z鱼
