--- a/Rastera/asnic/vesaid/Argus.html
+++ b/Rastera/asnic/vesaid/Argus.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <pre id="editor">
-olid~OutØVesaid空间部分
+SØV空间部分
     Chronosphere 
     Holes dimension ratio velocity 
     Gaps Ats
@@ -66,7 +66,7 @@ olid~OutØVesaid空间部分
     编程
     变成
     Xamarin X=>跟什么样的文字或字母念什么样的音 
-    G 发音 in ae
+    G same 'e' 发音 in ae
     Gen 
     Get
 索来德Solid-Out 
