--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -58,13 +58,17 @@
     国加层次 
     卫星.党派牵制
     黑社会.层次
+    properganda        
+    *军权 国家牵制
+        类似于郭文贵事件
     Aliens.KansaiF.OpenSecret
     HxW.附宇纣T.T. Kurser
         主要部位动
         生日
+    嫁接 //林津伊 张镇爱
+    StartGroup Transparent
     鬼地方
-
-国际通知 NationalTranspeaker
+    国际通知 NationalTranspeaker
 
 Reria'z Lave(Rhea)
     Explais.Group
@@ -74,6 +78,8 @@ Reria'z Lave(Rhea)
         老杜 郑明雪 巩亮亮（你得听） -(我)- Afled
     As fOr revenge at the restriction of Law
         The law:how to USE it to the maximum 
+Transplant
+    注入液体 星际跟踪
     </textarea>
 </body>
 </html>
