--- a/Rastera/asnic/arrange-beauty/rockmega.html
+++ b/Rastera/asnic/arrange-beauty/rockmega.html
@@ -21,6 +21,47 @@ Soft min tiny YY
     + 握手 拥抱 
     + 与男人 女人 过度人做爱 Vesaina Kappa
 Σ 无敌influencial it depends doing what sort of life form.
+
+Ͼref术语Analytical.docx
+    ΦȸȹʘθΘΘΟϘϙϾϿϽЮЭФфѤѲѺӦӧӪΔ￠
+    HP血槽还剩无几
+    生命源?.能.量 是否费去 
+    角色
+    地界/能量场 武器装备 战术 魔法 招式 （Anti methods，more times and better than）
+
+Feeling First For me to enemies then EnterØtain
+Technology:
+Kpier Kπr 科贝尔  维赛美丽 Vesaim~
+Rockman.Megnman
+needlo 
+Funny Scream
+Gta.BeingRollOver
+生气 bit by bit
+
+折磨 Sexabuse depends what sort of games etc
+耐性折磨
+烦     
+With(Rockman)
+Iceman.Blink.Interval.PhysicalMassSeduct
+Cutman.Arc 笑里藏刀
+Bombman.shield闹
+Elecman.Blink.Fall
+Elecman.TombRadier.RatLight.Block
+Dr.Wally.黄色分裂气人.HardInfo
+Use gaps while rockman jumps
+With(ANPAN_MAN.zip)
+迷宫意境 汉堡包 麦克斯 Smart 精明
+赵鹿 耳 朵☾▼◆
+Ͼlicai~k
+    With(FC)
+    Rygar 白金索引 Golden Platinum Index
+    Argos未来战士
+    Salamender
+    参照docx.ȸ6-26 = Rast-7 2020/7/20 14:06AM Aging
+    ♀埃及关卡 看不见的螃蟹 忽略鹰头上的水晶
+    角色Rolᴂ 能量生命 不怕没柴烧
+    蝌蚪 sperm生 Sprites’Voice  AEffect HΔW
+    GeneticalStab
     </pre>
 </head>
 <body>
