--- a/Rastera/asnic/rastera/heuristic.html
+++ b/Rastera/asnic/rastera/heuristic.html
@@ -64,7 +64,7 @@ Rhea CKronor
             
         生命体文明历史最早演化 
         Dino：恐龙
-        Group：群 氏 族 部  落  酋  奴 主 隶 封 建 //社会
+        Group：群 氏 族 部落 酋  奴 主 隶 封 建 //社会
         Kause:be dic cause
             女: 义~ gay~单性~双性:男 
             -----------------------
@@ -141,6 +141,43 @@ FrameSleep5：10-25
     emporCount = ltsz * 疼 * kansaiF.isRecognized.Count
        穷变富
        疼更疼 AngleCount
-    </pre>
+FrameSleep7：10-26
+    mirror：cos reflect
+        overuse
+        waste
+        kansai notice first kause of  absolute pure environment plant
+        metricthinking：krystal diamond
+    skin hand touch overall 
+        under maybe first
+        hand little finger to thumb
+        keyboard unknown finger
+    Cos    
+        light and beam reflect 
+    Crystal
+        study communication
+    Enzo Crytech
+        leon in
+        Rational 
+            Rose
+            Ross
+            Rosetta
+    
+    Wireless 0 1 trangle is removed and the bottom line
+4plus endo 20-27
+    Muscle:
+        belly dick turtle
+Jesus Krstal + 7 PM 12:11 10/28
+    主牢烙 方格蚩 ruler 
+    牙色忘
+国际招魂 10-29
+    evocation
+    zither
+    维金变形记 日寸 
+        self-abortion         
+        dice after bornt
+10-31 will be
+    Solid.Metricwitch.Language.Effect
+
+</pre>
 </body>
 </html>
