--- a/Rastera/asnic/rastera/rast.html
+++ b/Rastera/asnic/rastera/rast.html
@@ -29,8 +29,9 @@
     小时候脑海伯恩记忆 从出生牵引到 Anti~gaps 健康 参照健康docx
     格兰蒂亚 tele-cfs former life
     bottom low middle high眼 眉  健康
-    bottom low middle high
-    bottom low middle high 困
+    bottom low middle high 党 串 Rositta
+    bottom low middle high 困 frame
+
 
 开始Rast
 
