--- a/Rastera/asnic/rastera/heuristic.html
+++ b/Rastera/asnic/rastera/heuristic.html
@@ -177,7 +177,15 @@ Jesus Krstal + 7 PM 12:11 10/28
         dice after bornt
 10-31 will be
     Solid.Metricwitch.Language.Effect
-
+10-3~2 日 困
+    上古正神
+Geother-Post-longfumarket：11-7
+    突厥语 
+        键盘：重复连贯 链方向： 上 下 做 油
+        2,3个字母组成一个
+11-9
+    平衡字 朝右边的
+    South Pole 撮苤紫
 </pre>
 </body>
 </html>
