--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -23,6 +23,8 @@
     Ignite
     附体农村罪徒元素
     Arrange Lz: 东北 北京 被干
+    Opposite anger range Then
+    regrouped opposites 气到位 鸿门宴 then
 圣女贞德Gendering◆
     //良 压着?.B比看到落体钕妊耿好
     ?1色即是空
@@ -54,7 +56,6 @@
 　　    附体 生命体 起源 源起 
 银翼Silver
     传单
-    HxW
     国加层次 
     卫星.党派牵制
     黑社会.层次
@@ -69,7 +70,7 @@
     StartGroup Transparent
     鬼地方
     国际通知 NationalTranspeaker
-
+    Binladen
 Reria'z Lave(Rhea)
     Explais.Group
     when snic 
