--- a/Rastera/asnic/rastera/heuristic.html
+++ b/Rastera/asnic/rastera/heuristic.html
@@ -183,9 +183,46 @@ Geother-Post-longfumarket：11-7
     突厥语 
         键盘：重复连贯 链方向： 上 下 做 油
         2,3个字母组成一个
-11-9
-    平衡字 朝右边的
-    South Pole 撮苤紫
+11-9 to  11
+    平衡字 
+    朝右边的
+    撮苤紫South Pole 
+    整个字 偏旁部首 索来德 方向 
+    左右 上下 对子 后司 
+        下
+        上
+    中英文字母偏旁部首 Geographic Metric-Thinking
+        左撇子 朝着左面的 分类入库 个数统计
+             下 夕
+        [左] 中 右
+             上 我
+    语系：欧罗 突厥 汉藏
+
+        华阴音 俄语  bi b 
+        上下赌点 分离 连贯 IsDirect IsDashed IsArc
+        Persvision Position-Towards 大|小|写  
+        Dd Ll
+        反写都还顺手的
+        qp 
+        手写 打字
+
+    定于沌湟 Testiclefish 雪性毬  妓鼠Lz小天鹅
+
+    Framily:Extreme | Absolute
+        Virginal as physcial criteria
+        Isdirty?contest:absolute           
+        bar-level-boundary
+        abuse  swear
+            滥用; 妄用; 虐待; 辱骂; 恶语;
+        Sexcast as PBC Creal
+
+    战争折
+        Kause 古罗马 彼得大帝 二战
+    Anal holes tissues color flip times
+    世纪元 地理 书写 叫法
+    metric vos metvos 区域叫法：省 郡 州
+    地名翻译 Geometric Calling
+    吴语 殇hair 附单
 </pre>
 </body>
 </html>
