--- a/Rastera/asnic/rastera/heuristic.html
+++ b/Rastera/asnic/rastera/heuristic.html
@@ -220,7 +220,7 @@ Geother-Post-longfumarket：11-7
         Kause 古罗马 彼得大帝 二战
     Anal holes tissues color flip times
     世纪元 地理 书写 叫法
-    metric vos metvos 区域叫法：省 郡 州
+    metric vesaid solid odin timesnical 区域叫法：省 郡 州
     地名翻译 Geometric Calling
     吴语 殇hair 附单
 </pre>
