--- a/Rastera/asnic/vesaier/mime.html
+++ b/Rastera/asnic/vesaier/mime.html
@@ -51,8 +51,8 @@ NASTY宋
 　　江 展昭爪牙 □?虫龙?NIKE?fedback?斩?照?压?招??
 　　六小轻剁(> .?面刀<)手吓 
 　　行角屁不行醒脚
-　　
-
+陈婷&王春雷 伊丽莎白
+    英国法国
     </pre>
 </body>
 </html>
