geo-shumei-glasswall

--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -30,6 +30,39 @@
     8                         A
     9                         Q
     ♀ⅠⅡⅢⅣⅤⅥⅦⅧⅨⅩⅪⅫ△
+维中仙：11-15 2:00 midnight
+    Axis.SideKick:
+        Attach
+            Span distance
+        IsWrapped
+    Feedback
+        KornerCollsionSnicTimes
+        KolorRint
+        SideRidge
+    Metricwhich Leon Rotate Feeling 
+        Earth-Thinking:SymbolMetricForming
+        
+    Fitrate
+    Size
+    Shapes
+        Ladder
+        EclipseLadder
+        Arcside
+    3d wall for buiding by using flexible material
+        kansai communication
+        sexcast
+        exhaust thinking
+        flexible
+        dynamic
+        transparent
+    Asnic Orith
+
+    //Allocate Aollic 
+    
+    Assgin Operation logical loop
+    Container
+
+
 </pre>
 </body>
 </html>
