--- a/UnitTest/Analytical/screenable.html
+++ b/UnitTest/Analytical/screenable.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <script src="../content/jquery/jquery-3.5.1.min.js"></script>
+    <script src="content/jquery-3.5.1.min.js"></script>
+    
     <style type="text/css">
         body {
             font-size:12px;
