--- a/AngelNetwork/analytical/adverse.html
+++ b/AngelNetwork/analytical/adverse.html
@@ -15,7 +15,7 @@
         }
 
         div {
-            line-height:87%;
+            line-height:110%;
             margin-top: 0;
             margin-bottom: 0;
         }
@@ -33,9 +33,9 @@
             /*writing-mode: vertical-lr*/; /*从左向右 从右向左是 writing-mode: vertical-rl;
             /*writing-mode: tb-lr; /*IE浏览器的从左向右 从右向左是 writing-mode: tb-rl；*/*/
             	/*transform: rotateY(180deg);*/ /* css3 */
-	-moz-transform:skew(0deg, 180deg) scale(-1, 1); /* for ff */
-	-webkit-transform: rotateY(180deg); /* for chrome and safari */
-	-o-transform:skew(0deg, 180deg) scale(-1, 1); /* for opera */
+	 transform:skew(0deg, 180deg) scale(-1, 1); /* for ff */
+	 transform: rotateY(180deg); /* for chrome and safari */
+	 transform:skew(0deg, 180deg) scale(-1, 1); /* for opera */
 	/*overflow-x:hidden;*/
     /*float:left;*/
         }
@@ -46,8 +46,190 @@
 
     <div class="adverse">最早见于《尚书·周书·武成》</div>
     <div>最早见于《尚书·周书·武成》</div>
-        <div class="flip">最早见于《尚书·周书·武成》</div>
+    Dabeihaben die Naturbeschreibungen zwei Grundfunktionen: „Zum Einen dienen sie als Mediumzur Vermittlung von Stimmungen, zum Anderen als objektive äußere Schilderunginnerer seelischer Vorgänge.“(Reimann, 1995, S. 85)
+        <div class="flip">
+            ぁあぃいぅうぇえぉおかがきぎくぐけげこごさざしじすずせぜそぞただちぢっつづてでとどなにぬねのはばぱひびぴふぶぷへべぺほぼぽまみむめもゃやゅゆょよらりるれろゎわゐゑをんゔゕゖァアィイゥウェエォオカガキギクグケゲコゴサザシジスズセゼソゾタダチヂッツヅテデトドナニヌネノハバパヒビピフブプヘベペホボポマミムメモャヤュユョヨラリルレロヮワヰヱヲンヴヵヶヷヸヹヺ・ーヽヾヿ゠ㇰㇱㇲㇳㇴㇵㇶㇷㇸㇹㇺㇻㇼㇽㇾㇿ
 
+①②③④⑤⑥⑦⑧⑨⑩⑪⑫⑬⑭⑮⑯⑰⑱⑲⑳⓪
+❶❷❸❹❺❻❼❽❾❿⓫⓬⓭⓮⓯⓰⓱⓲⓳⓴
+㊀㊁㊂㊃㊄㊅㊆㊇㊈㊉
+一二三四五六七八九十
+⑴⑵⑶⑷⑸⑹⑺⑻⑼⑽⑾⑿⒀⒁⒂⒃⒄⒅⒆⒇
+⒈⒉⒊⒋⒌⒍⒎⒏⒐⒑⒒⒓⒔⒕⒖⒗⒘⒙⒚⒛
+ⅠⅡⅢⅣⅤⅥⅦⅧⅨⅩⅪⅫ
+ⒶⒷⒸⒹⒺⒻⒼⒽⒾⒿⓀⓁⓂⓃⓄⓅⓆⓇⓈⓉⓊⓋⓌⓍⓎⓏ
+ⓐⓑⓒⓓⓔⓕⓖⓗⓘⓙⓚⓛⓜⓝⓞⓟⓠⓡⓢⓣⓤⓥⓦⓧⓨⓩ
+⒜⒝⒞⒟⒠⒡⒢⒣⒤⒥⒦⒧⒨⒩⒪⒫⒬⒭⒮⒯⒰⒱⒲⒳⒴⒵
+⁰¹²³⁴⁵⁶⁷⁸⁹₀₁₂₃₄₅₆₇₈₉
+    Dabeihaben die Naturbeschreibungen zwei Grundfunktionen: „Zum Einen dienen sie als Mediumzur Vermittlung von Stimmungen, zum Anderen als objektive äußere Schilderunginnerer seelischer Vorgänge.“(Reimann, 1995, S. 85)
+
+
+  Аннотация: Одним из важнейших элементов национальной культуры является свадебный обряд, в котором сконцентрирована многовековая история и культура. Свадебный обряд как культурный феномен прямо или косвенно позволяет нам заглядывать в политические, экономические и культурные особенности эпох. В каждой стране наблюдаются уникальные традиции и многочисленные правила проведения свадебного торжества. Отмечаются сходства в русских и китайских свадебных обрядах, которые в большей степени отличаются друг от друга.
+
+В данной работе вначале дано сравнение традиционных свадебных обрядов России и Китая по отношению предсвадебных, свадебных и послесвадебных обрядов. А затем дается попытка объяснения факторов, повлиявших на формирование русских и китайских свадебных ритуалов, в последней части диссертации подробно анализированы новые тенденции современных свадебных обрядов России и Китая. Исследование данной темы помогает изучающим русскую социальную культуру лучше понять различные культурные обычаи, что способствует развитию дружбы между двумя странами.
+
+Ключевые слова: Свадьба; Обряд; Культура; Китай; Россия
+
+ 
+
+中文摘要:婚礼习俗是民族文化最重要的要素之一，集中了几百年的历史和文化。其作为一种文化现象，直接或间接地让我们窥探到几个时代的政治、经济、文化风貌。每个国家都有举办婚礼的独特传统和众多规矩。俄罗斯和中国的婚礼习俗有很多相似之处，在很大程度上又相互区别。
+
+这篇论文先对中俄两国传统婚礼习俗从婚前、婚礼、婚后进行了比较，接着阐释了中俄婚礼仪式差异形成的历史原因，最后还分析了现代中俄两国婚礼习俗的演变特征。该课题的研究可以帮助我们在学习俄罗斯社会文化的过程中，增加对不同文化风俗的深入了解，促进发展两国友谊。
+
+关键词：婚礼 习俗 文化 俄罗斯 中国
+
+ 
+
+Оглавление
+
+Аннотация
+
+中文摘要
+
+1. Введение-1
+
+2. Сравнение традиционных свадебных обрядов России и Китая-3
+
+2.1 До свадьбы-3
+
+2.2 В день свадьбы-6
+
+2.3 После свадьбы-9
+
+3. Факторы, повлиявшие на формирование русского и китайского свадебных обрядов-12
+
+3.1 Экономическая система-12
+
+3.2 Религия-13
+
+4. Новые тенденции в современных свадебных обрядах-15
+
+5. Заключение-19
+
+Литература-20
+
+От автора-21
+
+باستى جاڭالىقتار
+پۋدۇڭدى يگەرۋدىڭ، اشىق ۇستاۋدىڭ 30 جىلدىعىن قۇتتىقتاۋ جينالىسى سالتاناتپەن وتكىزىلدى
+شي جينپيڭ بريكس ەلدەرى باسشىلارىنىڭ 12 - رەتكى ءديدارلاسۋىنا، ازيا - تىنىق مۇحيت ەكونوميكالىق سەلبەستىك ۇيىمىنىڭ 27 - رەتكى باسشىلار بەيرەسمي كەڭەسىنە، 20 ەل توبى باسشىلارىنىڭ 15 - رەتكى باس قوسۋىنا قاتىناسادى
+شي جينپيڭ 3 - كەزەكتى پاريج بەيبىتشىلىك تالقى مىنبەرىندە بەينە ەكران ارقىلى ارناۋ ءسوز سويلەدى
+پۋدۇڭدى يگەرۋدىڭ، اشىق ۇستاۋدىڭ 30 جىلدىعىن قۇتتىقتاۋ جينالىسىندا سويلەنگەن ءسوز
+اۆتونوميالى رايوندىق پارتكومنىڭ نازاريا ۇيرەنۋ وزەكتى گرۋپپاسى باس شۋجي شي جينپيڭنىڭ يدەولوگيا قىزمەتى جونىندەگى ماڭىزدى بايىمداۋلارىن توپتىق ۇيرەندى
+اۆتونوميالى رايوندىق 13 - كەزەكتى حالىق ۇكىمەتى 102 - رەتكى ۇنەمىلىك ىستەر ءماجىلىسىن اشتى
+پارتيا 19 - كەزەكتى ورتالىق كوميتەتى بەسىنشى جالپى ءماجىلىسىنىڭ رۋحىن ۇيرەنۋ، دايەكتىلەندىرۋ جونىندەگى ورتالىق ۇگىت - لەكسيا ۇيىرمەسىنىڭ بايانداما جاساۋ ءماجىلىسى بيڭتۋاندا وتكىزىلدى
+قاشقار ايماعى: مال شارۋاشىلىعىنىڭ قالىپتى ءوندىرىسىن بار كۇشپەن قامتاماسىز ەتتى
+مەديتسينالىق باقىلاۋدان بوساتىلعان اۋرۋ بەلگىسى جوق جۇعىمدالۋشى 100 ادامنان استى
+اۆتونوميالى رايون تەلەۆيزور - تەلەفون ءماجىلىسىن اشىپ بيىل قىستاعى جانە كەلەر جىلى كوكتەمدەگى ەگىنجاي سۋ يگىلىگى جانە جوعارى ولشەمدى ەگىنجاي قۇرىلىسى قىزمەتىن ورنالاستىردى، جايعاستىردى
+بەرتىنگى 5 جىلدا رايونىمىزدا ءبىر ميلليونعا جۋىق جۇمىسشى - قىزمەتكەر تۇرعىن ءۇي الەۋمەتتىك قورى قارىز اقشاسىنان يگىلىكتەندى
+قاعىلىق اۋدانى: جاڭعاق حالىقتى بايىتاتىن ءىرى كاسىپ سالاسىنا اينالدى
+ۇنەمى دەنە شىنىقتىراتىندار 8 ميلليونعا جەتتى
+جىڭۋي توبى: بيىل شينجياڭعا 2 ميلليارد يۋان قارجى قوسۋ نىساناسىن ورىنداۋعا كۇش سالا كەپىلدىك ەتتى
+تيانشان جەڭىس تۋنەلىندە قۇرىلىس قاۋىرت جۇرگىزىلۋدە
+باش ۇجمە قىستاعى: ەرەكشە كاسىپ سالاسى تىڭ ساتىعا كوتەرىلىپ، قىستاق تۇرعىندارىنىڭ كىرىسى ۇستەمەلەپ ارتتى
+سۋرەتتى حابار
+چىن چۋانگو ۇرىمجىدە تەكسەرۋ - زەرتتەۋ جۇرگىزدى
+شولۋ
+جۇڭگونىڭ بازارىن دۇنيە ءجۇزىنىڭ بازارىنا، بىرگە يگىلىكتەنەتىن بازارعا، كوپشىلىكتىڭ بازارىنا اينالدىرايىق
+سەلبەسىپ تەڭ يگىلىككە كەنەلەتىن، سەلبەسىپ جاۋاپكەرشىلىكتى تەڭ ارقالايتىن، سەلبەسىپ تەڭ جونگە سالاتىن بىرگە ەسىك اشۋدى ىلگەرىلەتەيىك
+جاپپاي سوتسياليستىك وسىزاماندانعان مەملەكەت قۇرۋعا جاقسى باستاما اشىپ، جاقسى قادام تاستايىق
+ەسىك اشۋ بارىسىندا وراي ازىرلەپ، سەلبەستىك بارىسىندا قيىن ماسەلەلەردى شەشەيىك
+دامۋ مەن حاۋىپسىزدىكتى ءبىر تۇتاس جوسپارلاۋعا تاباندى بولايىق
+حالىقتىڭ تاماشا تۇرمىسقا تالپىنىسىن ۇزدىكسىز جۇزەگە اسىرايىق
+        </div>
+
+    <div class="">
+            ぁあぃいぅうぇえぉおかがきぎくぐけげこごさざしじすずせぜそぞただちぢっつづてでとどなにぬねのはばぱひびぴふぶぷへべぺほぼぽまみむめもゃやゅゆょよらりるれろゎわゐゑをんゔゕゖァアィイゥウェエォオカガキギクグケゲコゴサザシジスズセゼソゾタダチヂッツヅテデトドナニヌネノハバパヒビピフブプヘベペホボポマミムメモャヤュユョヨラリルレロヮワヰヱヲンヴヵヶヷヸヹヺ・ーヽヾヿ゠ㇰㇱㇲㇳㇴㇵㇶㇷㇸㇹㇺㇻㇼㇽㇾㇿ
+
+①②③④⑤⑥⑦⑧⑨⑩⑪⑫⑬⑭⑮⑯⑰⑱⑲⑳⓪
+❶❷❸❹❺❻❼❽❾❿⓫⓬⓭⓮⓯⓰⓱⓲⓳⓴
+㊀㊁㊂㊃㊄㊅㊆㊇㊈㊉
+一二三四五六七八九十
+⑴⑵⑶⑷⑸⑹⑺⑻⑼⑽⑾⑿⒀⒁⒂⒃⒄⒅⒆⒇
+⒈⒉⒊⒋⒌⒍⒎⒏⒐⒑⒒⒓⒔⒕⒖⒗⒘⒙⒚⒛
+ⅠⅡⅢⅣⅤⅥⅦⅧⅨⅩⅪⅫ
+ⒶⒷⒸⒹⒺⒻⒼⒽⒾⒿⓀⓁⓂⓃⓄⓅⓆⓇⓈⓉⓊⓋⓌⓍⓎⓏ
+ⓐⓑⓒⓓⓔⓕⓖⓗⓘⓙⓚⓛⓜⓝⓞⓟⓠⓡⓢⓣⓤⓥⓦⓧⓨⓩ
+⒜⒝⒞⒟⒠⒡⒢⒣⒤⒥⒦⒧⒨⒩⒪⒫⒬⒭⒮⒯⒰⒱⒲⒳⒴⒵
+⁰¹²³⁴⁵⁶⁷⁸⁹₀₁₂₃₄₅₆₇₈₉
+    Dabeihaben die Naturbeschreibungen zwei Grundfunktionen: „Zum Einen dienen sie als Mediumzur Vermittlung von Stimmungen, zum Anderen als objektive äußere Schilderunginnerer seelischer Vorgänge.“(Reimann, 1995, S. 85)
+
+
+  Аннотация: Одним из важнейших элементов национальной культуры является свадебный обряд, в котором сконцентрирована многовековая история и культура. Свадебный обряд как культурный феномен прямо или косвенно позволяет нам заглядывать в политические, экономические и культурные особенности эпох. В каждой стране наблюдаются уникальные традиции и многочисленные правила проведения свадебного торжества. Отмечаются сходства в русских и китайских свадебных обрядах, которые в большей степени отличаются друг от друга.
+
+В данной работе вначале дано сравнение традиционных свадебных обрядов России и Китая по отношению предсвадебных, свадебных и послесвадебных обрядов. А затем дается попытка объяснения факторов, повлиявших на формирование русских и китайских свадебных ритуалов, в последней части диссертации подробно анализированы новые тенденции современных свадебных обрядов России и Китая. Исследование данной темы помогает изучающим русскую социальную культуру лучше понять различные культурные обычаи, что способствует развитию дружбы между двумя странами.
+
+Ключевые слова: Свадьба; Обряд; Культура; Китай; Россия
+
+ 
+
+中文摘要:婚礼习俗是民族文化最重要的要素之一，集中了几百年的历史和文化。其作为一种文化现象，直接或间接地让我们窥探到几个时代的政治、经济、文化风貌。每个国家都有举办婚礼的独特传统和众多规矩。俄罗斯和中国的婚礼习俗有很多相似之处，在很大程度上又相互区别。
+
+这篇论文先对中俄两国传统婚礼习俗从婚前、婚礼、婚后进行了比较，接着阐释了中俄婚礼仪式差异形成的历史原因，最后还分析了现代中俄两国婚礼习俗的演变特征。该课题的研究可以帮助我们在学习俄罗斯社会文化的过程中，增加对不同文化风俗的深入了解，促进发展两国友谊。
+
+关键词：婚礼 习俗 文化 俄罗斯 中国
+
+ 
+
+Оглавление
+
+Аннотация
+
+中文摘要
+
+1. Введение-1
+
+2. Сравнение традиционных свадебных обрядов России и Китая-3
+
+2.1 До свадьбы-3
+
+2.2 В день свадьбы-6
+
+2.3 После свадьбы-9
+
+3. Факторы, повлиявшие на формирование русского и китайского свадебных обрядов-12
+
+3.1 Экономическая система-12
+
+3.2 Религия-13
+
+4. Новые тенденции в современных свадебных обрядах-15
+
+5. Заключение-19
+
+Литература-20
+
+От автора-21
+
+باستى جاڭالىقتار
+پۋدۇڭدى يگەرۋدىڭ، اشىق ۇستاۋدىڭ 30 جىلدىعىن قۇتتىقتاۋ جينالىسى سالتاناتپەن وتكىزىلدى
+شي جينپيڭ بريكس ەلدەرى باسشىلارىنىڭ 12 - رەتكى ءديدارلاسۋىنا، ازيا - تىنىق مۇحيت ەكونوميكالىق سەلبەستىك ۇيىمىنىڭ 27 - رەتكى باسشىلار بەيرەسمي كەڭەسىنە، 20 ەل توبى باسشىلارىنىڭ 15 - رەتكى باس قوسۋىنا قاتىناسادى
+شي جينپيڭ 3 - كەزەكتى پاريج بەيبىتشىلىك تالقى مىنبەرىندە بەينە ەكران ارقىلى ارناۋ ءسوز سويلەدى
+پۋدۇڭدى يگەرۋدىڭ، اشىق ۇستاۋدىڭ 30 جىلدىعىن قۇتتىقتاۋ جينالىسىندا سويلەنگەن ءسوز
+اۆتونوميالى رايوندىق پارتكومنىڭ نازاريا ۇيرەنۋ وزەكتى گرۋپپاسى باس شۋجي شي جينپيڭنىڭ يدەولوگيا قىزمەتى جونىندەگى ماڭىزدى بايىمداۋلارىن توپتىق ۇيرەندى
+اۆتونوميالى رايوندىق 13 - كەزەكتى حالىق ۇكىمەتى 102 - رەتكى ۇنەمىلىك ىستەر ءماجىلىسىن اشتى
+پارتيا 19 - كەزەكتى ورتالىق كوميتەتى بەسىنشى جالپى ءماجىلىسىنىڭ رۋحىن ۇيرەنۋ، دايەكتىلەندىرۋ جونىندەگى ورتالىق ۇگىت - لەكسيا ۇيىرمەسىنىڭ بايانداما جاساۋ ءماجىلىسى بيڭتۋاندا وتكىزىلدى
+قاشقار ايماعى: مال شارۋاشىلىعىنىڭ قالىپتى ءوندىرىسىن بار كۇشپەن قامتاماسىز ەتتى
+مەديتسينالىق باقىلاۋدان بوساتىلعان اۋرۋ بەلگىسى جوق جۇعىمدالۋشى 100 ادامنان استى
+اۆتونوميالى رايون تەلەۆيزور - تەلەفون ءماجىلىسىن اشىپ بيىل قىستاعى جانە كەلەر جىلى كوكتەمدەگى ەگىنجاي سۋ يگىلىگى جانە جوعارى ولشەمدى ەگىنجاي قۇرىلىسى قىزمەتىن ورنالاستىردى، جايعاستىردى
+بەرتىنگى 5 جىلدا رايونىمىزدا ءبىر ميلليونعا جۋىق جۇمىسشى - قىزمەتكەر تۇرعىن ءۇي الەۋمەتتىك قورى قارىز اقشاسىنان يگىلىكتەندى
+قاعىلىق اۋدانى: جاڭعاق حالىقتى بايىتاتىن ءىرى كاسىپ سالاسىنا اينالدى
+ۇنەمى دەنە شىنىقتىراتىندار 8 ميلليونعا جەتتى
+جىڭۋي توبى: بيىل شينجياڭعا 2 ميلليارد يۋان قارجى قوسۋ نىساناسىن ورىنداۋعا كۇش سالا كەپىلدىك ەتتى
+تيانشان جەڭىس تۋنەلىندە قۇرىلىس قاۋىرت جۇرگىزىلۋدە
+باش ۇجمە قىستاعى: ەرەكشە كاسىپ سالاسى تىڭ ساتىعا كوتەرىلىپ، قىستاق تۇرعىندارىنىڭ كىرىسى ۇستەمەلەپ ارتتى
+سۋرەتتى حابار
+چىن چۋانگو ۇرىمجىدە تەكسەرۋ - زەرتتەۋ جۇرگىزدى
+شولۋ
+جۇڭگونىڭ بازارىن دۇنيە ءجۇزىنىڭ بازارىنا، بىرگە يگىلىكتەنەتىن بازارعا، كوپشىلىكتىڭ بازارىنا اينالدىرايىق
+سەلبەسىپ تەڭ يگىلىككە كەنەلەتىن، سەلبەسىپ جاۋاپكەرشىلىكتى تەڭ ارقالايتىن، سەلبەسىپ تەڭ جونگە سالاتىن بىرگە ەسىك اشۋدى ىلگەرىلەتەيىك
+جاپپاي سوتسياليستىك وسىزاماندانعان مەملەكەت قۇرۋعا جاقسى باستاما اشىپ، جاقسى قادام تاستايىق
+ەسىك اشۋ بارىسىندا وراي ازىرلەپ، سەلبەستىك بارىسىندا قيىن ماسەلەلەردى شەشەيىك
+دامۋ مەن حاۋىپسىزدىكتى ءبىر تۇتاس جوسپارلاۋعا تاباندى بولايىق
+حالىقتىڭ تاماشا تۇرمىسقا تالپىنىسىن ۇزدىكسىز جۇزەگە اسىرايىق
+        </div>
+
+    <div class="flip">
     <div class="adverse">
         ھسداساقلھقژ—ف—فژقلقھسدا
 	كقھدلساقلكسدقاكلقھداسل
@@ -60,7 +242,7 @@
 	كھسقدالقسدالكدقسھلڭۇېۋرۇېڭۋر
 			ڭوۋېرۇوڭېۋرۋېرۋرې
     </div>
-
+        </div>
     <div>
       
     </div>
