--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -61,8 +61,27 @@
     
     Assgin Operation logical loop
     Container
-
-
+孩纸古代朵长：11-16
+   Requires： 吊屏幕 anishow-dialog when write asnic
+全身工属美：11-17
+    空格 每个函数
+11-19
+    All searchable
+    Solid Program
+        asymmetric thinking
+    Is absolute solid
+       Triangle：ladder triangle diamond
+    Is transcolor dotline
+    Axis：套 堆 角 边
+    html beside character（eg:input img textarea) element border rectangle solid = 1
+    Kolor Covered joint
+11-21
+    Aui:language padding habits
+    Aui:屏幕 回 左右 滚动 点击 定板
+    Aui first programming last | dynamical
+11-23
+    植物园 宽跨 正方形 黑衣裳 婕婕 文革改锥 南京苏联军事建筑 绿皮车 达马森 佘妖腰si~
+    四川 凉亭 dog O 圈拉式 莱西 
 </pre>
 </body>
 </html>
