--- a/Rastera/asnic/rastera/rast.html
+++ b/Rastera/asnic/rastera/rast.html
@@ -31,7 +31,7 @@
     bottom low middle high眼 眉  健康
     bottom low middle high 党 串 Rositta
     bottom low middle high 困 frame
-
+    [bottom] low middle high 面困 frame 20 plus
 
 开始Rast
 
