--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -80,8 +80,9 @@
     Aui:屏幕 回 左右 滚动 点击 定板
     Aui first programming last | dynamical
 11-23
-    植物园 宽跨 正方形 黑衣裳 婕婕 文革改锥 南京苏联军事建筑 绿皮车 达马森 佘妖腰si~
-    四川 凉亭 dog O 圈拉式 莱西 
+    植物园 宽跨 正方形 黑衣裳 婕婕 文革改锥 南京苏联军事建筑 绿皮车 达马森 佘妖腰si~ Vesaid.wrest猫懒得 反目成仇
+    四川 凉亭 dog O 圈拉式 莱西
+    土地局 婬性烟酒8 bar 韧者娲~马 sunset america rise
 </pre>
 </body>
 </html>
