--- a/AngelNetwork/analytical/basic.html
+++ b/AngelNetwork/analytical/basic.html
@@ -4,8 +4,8 @@
 
     <title></title>
 
-    <script src="../content/jquery/jquery-3.5.1.min.js"></script>
 
+    <script src="../content/jquery/jquery-3.5.1.min.js"></script>
 </head>
 <body>
     <!--
@@ -33,36 +33,68 @@ toUpperCase()	把字符串转换为大写
 trim()	移除字符串首尾空白
 
     -->
-    
-    <textarea id="TextArea1" cols="50" rows="20">
+
+    <textarea id="text" cols="50" rows="20">
         A China pediu aos Estados Unidos que parem de impor pressão máxima sobre o Irã e trabalhem para resolver a questão nuclear do Irã por meios políticos e diplomáticos, disse o porta-voz do Ministério das Relações Exteriores, Geng Shuang, nesta terça-feira (16)
 A manutenção do Acordo Nuclear com o Irã foi um tema importante na reunião dos chanceleres da União Europeia, realizada em Bruxelas na segunda-feira. Na coletiva de imprensa, a alta representante da UE para os Assuntos Exteriores e Política de Segurança, Federica Mogherini, disse que o acordo é viável sem planos alternativos e que a UE continuará trabalhando pela sua implementação, ao mesmo tempo, exige que o Irã volte a cumprir o acordo.
 Quando perguntado sobre as observações, Geng Shuang disse em uma coletiva de imprensa que os EUA devem enfrentar as preocupações da maioria da comunidade internacional, abandonar a conduta errada de exercer a pressão máxima sobre o Irã, evitar o impedimento da aplicação do acordo e criar condições para a solução diplomática e política da questão nuclear iraniana.
 Notando que a reunião enviou um sinal claro sobre a posição da UE, Geng Shuang reiterou que a implementação completa e eficaz do acordo era a única maneira prática e eficaz da solução da questão nuclear do Irã e do alívio das tensões.
 Os problemas relacionados à implementação do acordo pelo Irã devem ser resolvidos por meio do mecanismo da Comissão Conjunta do Acordo, disse o porta-voz, acrescentando que assegurar o equilíbrio entre os direitos e as obrigações do pacto é vital para sua defesa.
     </textarea>
-    <asdf style="font-size:111;">asdf</asdf>
+
     <br />
-    <textarea id="TextArea2" cols="50" rows="5"></textarea>
-    <div id="div1"></div>
-    <input type="button" value="basic autotest for metric string fuctions" onclick="get()" />
+    <!--  <textarea id="preditor" cols="50" rows="5"></textarea>-->
+    <div id="preditor" cols="50" rows="5">
+
+        <input type="button" id="butt" value="basic autotest for metric string fuctions" />
+        <input type="button" id="butt2" value="basic autotest for metric string fuctions" />
+
+        <input type="button" value="translate" onclick="t()" />
+        <script type="text/javascript" id="celly">
+            var filter = ":button";
+            $(filter).bind("click", function (e) {
+                $("#console").append(this.id);
+            });
+
+              var basic =
+                  [
+                      ["split", "分割", "ھسد"],
+                      ["slice", "提取", "چۋې"],
+                      ["substr", "萨博", "زشغ"]
+                  ];
+            //  function get() {
+                  basic.forEach(function (item) {
+                      item.forEach(function (e) {
+                          $("#console").append(e).append("<br /> ");
+                      });
+                  });
+                  $("#console").append("<br /> ");
+                  var lines = $('#text').val().split('\n');
+                  $.each(lines, function (index, item) {
+                      //    $this = $(this);
+                      $("#console").append(item);
+                  });
+            //  } 
+
+        </script>
+
+    </div>
+
+    <div id="console">
+    </div>
+
     <script type="text/javascript">
-        function get() {
-            var basic =
-                [
-                    ["split", "分割", "ھسد"]
-                ];
-            basic.forEach(function (item) {
-                   $("#div1").append(item);
-            });
-               $("#div1").append("<br/>");
-            var arrayOfLines = $('#TextArea1').val().split('\n');
-            $.each(arrayOfLines, function (index, item) {
-                //    $this = $(this);
-                $("#div1").append(item);
-            });
+        // var content = "";
+        alert(localStorage.getItem("celly"));
+        function t() {
+            //if ($("#preditor").html().length > 0)
+            //    content = $("#preditor").html();
+            localStorage.setItem("celly", $("#preditor").html());
+            $("#console").html(localStorage.getItem("celly"));
+          // $("#preditor").html("");
+           // alert($("#console").html())
         }
+
     </script>
-        [asdf]
 </body>
 </html>
