--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -83,6 +83,8 @@
     植物园 宽跨 正方形 黑衣裳 婕婕 文革改锥 南京苏联军事建筑 绿皮车 达马森 佘妖腰si~ Vesaid.wrest猫懒得 反目成仇
     四川 凉亭 dog O 圈拉式 莱西
     土地局 婬性烟酒8 bar 韧者娲~马 sunset america rise
+11-26
+    网整 方 油蛹蚩
 </pre>
 </body>
 </html>
