--- a/AngelNetwork/analytical/javascript.html
+++ b/AngelNetwork/analytical/javascript.html
@@ -5,30 +5,53 @@
     <meta charset="utf-8" />
     <title></title>
     <script src="jquery/jquery-3.5.1.min.js" type="text/javascript"></script>
+    <style type="text/css">
+        body {
+            /*background-color:burlywood;*/
+            background-image:url('kraft/kraft7.jpg');
+            font-size:14px;
+        }
+    </style>
 </head>
 <body>
-    <div id="result"></div>
-    <div id="ht">
-        <input type="button" value="butt" />
-        <input type="button" value="butt" />
-        <input type="button" value="butt" />
-        <input type="button" value="butt" />
-     
+    <div id="result">
+        <p>
+            تضاربت الأنباء بشأن الإفراج عن المطرانين المختطفين في سوريا، حيث أكد العقيد فاتح حسون مساعد رئيس هيئة الأركان في الجيش السوري الحر النبأ، متهما النظام بالوقوف وراء الاختطاف، بينما نفاه عضو السريان الأرثوذكس في الائتلاف الوطني لقوى الثورة والمعارضة السورية عبد الأحد سطيفو.
+
+
+وكانت مصادر قد نقلت مساء الثلاثاء عن اتحاد مسيحيي الشرق الأوسط أن مختطفي مطران السريان الأرثوذكس في حلب يوحنا إبراهيم ومطران الروم الأرثوذكس في حلب بولس يازجي أفرجوا عنهما، وقال المطران طوني يازجي من بطريركية الروم الأرثوذكس بدمشق إن الخاطفين أفرجوا عن المطرانين اللذين كانا قد اختطفا الاثنين في مدينة حلب (شمال) وإنهما في طريقهما إلى المطرانية بحلب.
+
+
+كما أكد العقيد حسون النبأ، وقال إن من اختطف المطرانين هو من لم تعجبه تصريحات أحدهما بشأن بقاء المسيحيين في وطنهم وأن سوريا ليست العراق، وذلك في إشارة إلى النظام.
+
+
+في المقابل، قال عضو الائتلاف الوطني عبد الأحد سطيفو إنه لا توجد معلومات مؤكدة حتى الآن عن إطلاق المطرانين.
+        </p>
+        <p>
+            وكان النظام السوري قد اتهم مجموعة "إرهابية" بخطف المطرانين بعد اعتراض سيارتهما في قرية كفر داعل، وفقا لما نقلته وكالة الأنباء السورية (سانا).
+
+
+وأنكرت جهات ثورية في حلب معرفتها بمكان المطرانين، وقال مركز حلب الإعلامي إنها بدأت عملية بحث واسعة عنهما، في حين اتهم الرئيس المستقيل للائتلاف الوطني أحمد معاذ الخطيب ما سماها أيادي خارجية بعملية الخطف، مضيفا أن المنفذ قد يكون جهازا استخباريا خارجيا يريد إشعال النار، ومشيرا إلى أن ثمة العشرات من الأجهزة الغربية التي "تأكل وتنام في بيوت بعض أبنائنا السوريين".
+
+
+وكانت ردود الفعل الدولية قد توالت على حادثة الخطف، إذ قال مسؤول العلاقات الخارجية في بطريركية موسكو المطران هيلاريون للصحفيين إن الكنيسة الأرثوذكسية الروسية تتخذ الإجراءات الهادفة إلى تحديد مكان وجود المطرانين، كما أعلن الفاتيكان أن البابا فرانشيسكو يتابع مسألة اختطاف المطرانين ويصلي لأجلهما.
+
+
+وذكر بيان رئاسي لبناني أن الرئيس ميشال سليمان شجب خطف المطرانين ودعا إلى إطلاقهما، مضيفا أن هذه الأساليب لا تحقق أهداف القائمين بها ولا تساهم في تحقيق الديمقراطية، كما أدان كل من مفتي الجمهورية اللبنانية الشيخ محمد رشيد قباني وحزب الله العملية.
+        </p>
+
+    </div>
+    <div>
+        مەركىزىي ھەربىي ئىشلار كومىتېتىنىڭ ھەربىي مەشىق يىغىنى 25-نويابىر بېيجىڭدا ئېچىلدى. جۇڭگو كومپارتىيەسى مەركىزىي كومىتېتىنىڭ باش شۇجىسى، دۆلەت رەئىسى، مەركىزىي ھەربىي ئىشلار كومىتېتىنىڭ رەئىسى شى جىنپىڭ يىغىنغا قاتناشتى ھەم مۇھىم سۆز قىلدى. ئۇ مۇنۇلارنى تەكىتلىدى: پۈتۈن ئارمىيە يېڭى دەۋردىكى پارتىيەنىڭ ئارمىيەنى قۇدرەت تاپقۇزۇش ئىدىيەسى، يېڭى دەۋردىكى ھەربىي ئىستراتېگىيە فاڭجېنىنى ئىزچىللاشتۇرۇپ، دىققەتنى ئۇرۇش تەييارلىقى، ئۇرۇش قىلىشقا مەركەزلەشتۈرۈش، ئەمەلىي ئۇرۇش، ئەمەلىي مەشىق، بىرلەشمە ئۇرۇش، بىرلەشمە مەشىق، پەن-تېخنىكا ئارقىلىق مەشىقنى كۈچەيتىش، مەشىقنى قانۇن بويىچە ئىدارە قىلىشتا چىڭ تۇرۇپ، ئېسىل ئەنئەنىنى جارى قىلدۇرۇپ، ئىسلاھات، يېڭىلىق يارىتىشنى يەنىمۇ كۈچەيتىپ، يېڭىچە ھەربىي مەشىق سىستېمىسىنى تېزدىن بەرپا قىلىپ، مەشىق سەۋىيەسى ۋە ئۇرۇشتا غەلىبە قىلىش ئىقتىدارىنى ئومۇميۈزلۈك ئۆستۈرۈپ، پارتىيەنىڭ يېڭى دەۋردىكى ئارمىيەنى قۇدرەت تاپقۇزۇش نىشانىنى ئىشقا ئاشۇرۇش، ئارمىيەمىزنى دۇنيانىڭ ئالدىنقى قاتارىدىكى ئارمىيە قىلىپ ئومۇميۈزلۈك قۇرۇپ چىقىشنى كۈچلۈك تىرەككە ئىگە قىلىشى كېرەك.
+
+شى جىنپىڭ چۈشتىن كېيىن سائەت تۆتلەردە جىڭشى مېھمانخانىسىغا بېرىپ، قىزغىن ئالقىش سادالىرى ئىچىدە، يىغىن ۋەكىللىرى، پۈتۈن ئارمىيەدىكى ھەربىي مەشىق قىلىشتىكى ئىلغار ئورۇنلارنىڭ ۋەكىللىرى ۋە ئىلغار شەخسلەر بىلەن سەمىمىي كۆرۈشتى، كۆپچىلىك بىلەن خاتىرە سۈرەتكە چۈشتى.
+
+شى جىنپىڭ يىغىندا مۇھىم سۆز قىلدى. ئۇ مۇنۇلارنى تەكىتلىدى: ھەربىي مەشىق-قىسىمنىڭ دائىملىق مەركىزىي خىزمىتى، جەڭگىۋارلىقنى ھاسىل قىلىش ۋە ئۆستۈرۈشنىڭ ئاساسىي يولى، ئەڭ بىۋاسىتە ھەربىي كۈرەش تەييارلىقى بولۇپ، قىسىمنىڭ ئۇرۇش قىلالايدىغان، ئۇرۇشتا غەلىبە قىلالايدىغان بولۇشىغا ھەقىقىي كاپالەتلىك قىلىش، قىسىمنىڭ ئومۇميۈزلۈك قۇرۇلۇش سەۋىيەسىنى ئۆستۈرۈشتە ئىنتايىن مۇھىم ئەھمىيەتكە ئىگە.
+
+شى جىنپىڭ مۇنداق كۆرسەتتى: پارتىيە 18-قۇرۇلتىيىدىن بۇيان، پارتىيە مەركىزىي كومىتېتى ۋە مەركىزىي ھەربىي ئىشلار كومىتېتى ئەمەلىي ئۇرۇشلاشقان ھەربىي مەشىقنى قەتئىي تەۋرەنمەي ئىلگىرى سۈرۈپ، پۈتۈن ئارمىيەنىڭ ھەربىي مەشىقنى ئىستراتېگىيەلىك ئورۇنغا قويۇشتا چىڭ تۇرۇشىغا تۈرتكە بولۇپ، ئەمەلىي ئۇرۇش، ئەمەلىي مەشىقنى نۇقتىلىق ئىلگىرى سۈرۈپ، بىرلەشمە جەڭ، بىرلەشمە مەشىققە چوڭقۇر تۈرتكە بولۇپ، مەشىق ساھەسىدىكى ئىسلاھات، يېڭىلىق يارىتىشنى زور كۈچ بىلەن ئىلگىرى سۈرۈپ، ئاممىۋى خاراكتېرلىك ھەربىي تەلىم ماھارىتى كۆرسىتىشكە كەڭ كۆلەمدە تۈرتكە بولدى. ئارمىيەمىز ھەربىي مەشىقتە، ئەمەلىي ئۇرۇشقا يېقىنلىشىش، ئەمەلىي ئۇرۇشقا مۇلازىمەت قىلىش جەھەتتە چوڭ قەدەم تاشلاپ، ئۇزاقتىن بۇيان ساقلىنىپ كەلگەن بەزى گەۋدىلىك زىددىيەت ۋە مەسىلىلەرنى ھەل قىلىپ، ئۇرۇش تەييارلىقى، ئۇرۇش قىلىش ئىقتىدارىنى ئۆستۈرۈش ۋە تۈرلۈك مۇھىم ۋەزىپىلەرنى ئورۇنلاشقا تىرەك بولدى.
     </div>
     <script type="text/javascript">
-        localStorage.setItem("lastname", "Smith");
-        localStorage.ht = $("#ht").html();
-      
-        // localStorage.clickcount = "";
-        if (localStorage.clickcount) {
-            localStorage.clickcount += 1;// "<br/><b>asdf</b>";
-        } else {
-            localStorage.clickcount = 1;
-        }
 
-        $("#result").append( "你在按钮上已经点击了 " + localStorage.clickcount + "次。");
-        $("#result").append(localStorage.ht);
-            $("#result").append(localStorage.getItem("lastname"));
-    </script>
+</script>
 </body>
 </html>
